# newsletter

backend/: README.md  pyproject.toml
backend/app/: main.py  paths.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: posts.py  users.py
backend/app/database/: database.py
backend/app/models/: posts.py  users.py
backend/app/schemas/: posts.py  users.py
backend/app/security/: auth_handler.py  auth_schemas.py  jwt_dependencies.py
backend/app/utils/: logger.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/config/: api.config.ts
frontend/src/navbar/components/: Navbar.tsx
frontend/src/pages/: CreatePostPage.tsx  HomePage.tsx  PostsListPage.tsx  SinglePostPage.tsx
frontend/src/posts/editor/components/: AddPostForm.tsx
frontend/src/posts/editor/hooks/: usePost.ts
frontend/src/posts/shared/api/: postService.ts
frontend/src/posts/shared/types/: post.ts
